@@ -30,7 +30,9 @@ Author URI: http://blog.yibble.org/
  * Include files get defined below:
  */
 require_once ( 'includes/wp-common.php');
-//require_once ( 'includes/wp-gnupg.php');
+
+if( function_exists( 'gnupg_init' )
+	require_once ( 'includes/wp-gnupg.php');
 
 /**
  * Variables get defined below:
@@ -316,14 +318,11 @@ function web_tripwire_signatures() {
 			
 			break;
 		case 'update':
-			//$info = verify_gpg_signature( get_gpg_plaintext (), get_gpg_signature () );
-
-			if ( $info !== FALSE ) {
-				$message = "Verification passed, Fingerprint = " . $info['fingerprint'];
+			if( function_exists( 'gnupg_init' ) {
 			} else {
-				$message = "Verfication failed, Key ID = " . $info['fingerprint'];
+				$message = 'gnupg_init() is not available to PHP.';
 			}
-			
+
 			?><div class="updated"><p><strong><?php echo $message; ?></strong></p></div><?php
 			
 			break;			
